Add line numbers to customer browser

--- a/modules/global/src/com/company/sample/entity/messages.properties
+++ b/modules/global/src/com/company/sample/entity/messages.properties
@@ -1,6 +1,7 @@
 Customer.address = Address
 Customer.name = Name
 Customer = Customer
+Customer.lineNum = Line No
 Order.customer = Customer
 Order.date = Date
 Order.num = Num
